[package]
name = "aliyundrive-fuse"
version = "0.1.2"
edition = "2021"
description = "FUSE for AliyunDrive"
license = "MIT"
homepage = "https://github.com/messense/aliyundrive-fuse"
repository = "https://github.com/messense/aliyundrive-fuse.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
bytes = "1.0.1"
clap = { version = "3.0.1", features = ["derive", "env", "wrap_help"] }
fuser = { version = "0.10.0", default-features = false }
futures-util = "0.3"
libc = "0.2.112"
oneshot = { version = "0.1.3", default-features = false, features = ["std"] }
openssl-probe = { version = "0.1.4", optional = true }
parking_lot = "0.11.2"
reqwest = { version = "0.11.7", default-features = false, features = ["json", "gzip", "blocking"] }
serde = { version = "1.0.127", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
url = "2.2.2"

[features]
default = ["rustls-tls", "libfuse"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored", "openssl-probe"]
libfuse = ["fuser/libfuse"]

[profile.release]
lto = true
opt-level = "z"  # Optimize for size

[package.metadata.deb]
maintainer = "messense <messense@icloud.com>"
copyright = "2021-present, messense <messense@icloud.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
阿里云盘 FUSE 磁盘挂载"""
depends = "fuse3"
section = "utility"
priority = "optional"
assets = [
    ["target/release/aliyundrive-fuse", "usr/bin/", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/aliyundrive-fuse", dest = "/usr/bin/aliyundrive-fuse", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/doc/aliyundrive-fuse/LICENSE", doc = true, mode = "0644" },
]

[package.metadata.generate-rpm.requires]
fuse3 = "*"
